Fix overflow navbar scrolling handler

--- a/src/assets/scss/components/app/_navbar.scss
+++ b/src/assets/scss/components/app/_navbar.scss
@@ -208,6 +208,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
 
           animation: breathe 3s linear infinite;
 
